--- a/src/features/bottom-menu/BottomMenu.scss
+++ b/src/features/bottom-menu/BottomMenu.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 15px 0;
 
     .btn-menu-option {
       outline: none;
